[gd_scene load_steps=8 format=3 uid="uid://cecu1j8flmqsk"]

[ext_resource type="Script" path="res://src/ui/reword_popup.gd" id="1_hb42v"]
[ext_resource type="Texture2D" uid="uid://1soacpg8f3jg" path="res://Assets/ui/popup_background.png" id="1_v3254"]
[ext_resource type="Texture2D" uid="uid://3o2os7ymq1yb" path="res://Assets/ui/btn/ok_btn_normal.png" id="2_52dv8"]
[ext_resource type="FontFile" uid="uid://bv3gahc7tukwm" path="res://Assets/fonts/NanumBarunpenB.ttf" id="2_pktci"]
[ext_resource type="Texture2D" uid="uid://b3hdd0i2rfnrq" path="res://Assets/ui/btn/ok_btn_pressed.png" id="3_a2hty"]
[ext_resource type="Texture2D" uid="uid://ddsi1j3boxam2" path="res://Assets/ui/result_progress_bar.png" id="5_74agc"]
[ext_resource type="Texture2D" uid="uid://dbe06083g8416" path="res://Assets/ui/result_progress_bar_inner.png" id="6_1202n"]

[node name="RewordPopup" type="CanvasLayer"]
scale = Vector2(1.3, 1.3)
transform = Transform2D(1.3, 0, 0, 1.3, 0, 0)
script = ExtResource("1_hb42v")

[node name="Background" type="TextureRect" parent="."]
offset_left = 2.30769
offset_top = 90.7692
offset_right = 362.308
offset_bottom = 450.769
texture = ExtResource("1_v3254")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 58.3077
offset_top = 179.769
offset_right = 306.308
offset_bottom = 345.769

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="ProgressConrol" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.30769
offset_top = 90.7692
offset_right = 42.3077
offset_bottom = 130.769

[node name="Title2" type="Label" parent="ProgressConrol"]
layout_mode = 0
offset_left = 107.0
offset_top = 50.0
offset_right = 259.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pktci")
theme_override_font_sizes/font_size = 24
text = "전투 진행중"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="ProgressConrol"]
layout_mode = 0
offset_left = 62.0
offset_top = 259.0
offset_right = 302.0
offset_bottom = 319.0
texture_under = ExtResource("5_74agc")
texture_progress = ExtResource("6_1202n")

[node name="ProgressBarValueLabel" type="Label" parent="ProgressConrol/TextureProgressBar"]
layout_mode = 0
offset_left = 100.0
offset_top = 16.0
offset_right = 154.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0.815686, 0.815686, 0.815686, 1)
theme_override_fonts/font = ExtResource("2_pktci")
theme_override_font_sizes/font_size = 20
text = "12%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 90.7692
offset_right = 40.0
offset_bottom = 130.769

[node name="OkBtn" type="TextureButton" parent="ResultControl"]
layout_mode = 0
offset_left = 98.0
offset_top = 262.0
offset_right = 458.0
offset_bottom = 362.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_52dv8")
texture_pressed = ExtResource("3_a2hty")

[node name="ResultLabel" type="Label" parent="ResultControl"]
layout_mode = 0
offset_left = 108.0
offset_top = 48.4616
offset_right = 260.0
offset_bottom = 83.4616
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pktci")
theme_override_font_sizes/font_size = 24
text = "승리!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="ResultControl/OkBtn" to="." method="_on_ok_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
